--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,13 @@ dependencies = [
     "mcp[cli]>=1.6.0",
     "requests>=2.32.3",
 ]
+
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+
+[project.scripts]
+weather-mcp = "weather_mcp_server.main:main"
